--- a/MsSqlDependencyBrowser/Web/index.html
+++ b/MsSqlDependencyBrowser/Web/index.html
@@ -1,4 +1,4 @@
-﻿<html ng-app="MsSqlDepandancyBrowser">
+﻿<html ng-app="MsSqlDependencyBrowser">
 <head>
     <title ng-controller="HeaderCtrl">{{objectName}}</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
