--- a/MsSqlDependencyBrowser/Web/index.html
+++ b/MsSqlDependencyBrowser/Web/index.html
@@ -22,7 +22,7 @@
             <div id="objectListContainer">
                 <ol id="objectList">
                     <li ng-repeat="object in currentObjectList | filter:filterObject">
-                        <a href="#!/{{object.schema}}.{{object.name}}" title="{{object.schema}}.{{object.name}}">{{object.schema}}.{{object.name}}</a>
+                        <a href="#!/{{object.schema_name}}.{{object.name}}" title="{{object.schema_name}}.{{object.name}}">{{object.schema_name}}.{{object.name}}</a>
                     </li>
                 </ol>
             </div>
